# glowtape

./: .gitignore  Makefile  README.md  set-time.sh  shell.nix  sync-tape.ps
casing/: README.md  bezier.scad  strip-case.scad
firmware/: 6x9.chars  CMakeLists.txt  Makefile  README.md  bitmap-contents.h  button-counter.h  font-6x9.c  font-6x9.h  font-message.c  font-message.h  font-timetext.c  font-timetext.h  frame-printer.h  glowtape.cc  large.chars  line-reader.h  message.chars  set-time.sh  strip-encoder.h  tinytext.chars
firmware/fonts/: large.bdf  timetext.bdf
pcb/encoder/: Makefile  README.md  encoder.kicad_pcb  encoder.kicad_pro  encoder.kicad_sch
